--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -3,43 +3,44 @@
     <div>
       <label for="name">Name</label>
       <input formControlName="name" id="name">
-      <span class="error" *ngIf="form.controls['name']?.hasError('required')">This Field is Required</span>
-      <span class="error" *ngIf="form.controls['name']?.hasError('maxlength')">Must be less than 56 Characters</span>
+      <span *ngIf="form.controls['name']?.hasError('required')" class="error">This Field is Required</span>
+      <span *ngIf="form.controls['name']?.hasError('maxlength')" class="error">Must be less than 56 Characters</span>
     </div>
 
     <div>
       <label for="description">Description</label>
       <input formControlName="description" id="description">
-      <span class="error" *ngIf="form.controls['description']?.hasError('required')">This Field is Required</span>
-      <span class="error" *ngIf="form.controls['description']?.hasError('maxlength')">Must be less than 56 Characters</span>
+      <span *ngIf="form.controls['description']?.hasError('required')" class="error">This Field is Required</span>
+      <span *ngIf="form.controls['description']?.hasError('maxlength')"
+            class="error">Must be less than 56 Characters</span>
 
     </div>
 
     <div>
       <label for="type">Type {{product?.type}}</label>
       <select formControlName="type" id="type">
-        <option value="pant" [selected]="product?.type === 'pant'">Pant</option>
-        <option value="shirt" [selected]="product?.type === 'shirt'">Shirt</option>
-        <option value="eyewear" [selected]="product?.type === 'eyewear'">Eyewear</option>
-        <option value="shoe" [selected]="product?.type === 'shoe'">Shoe</option>
-        <option value="dress" [selected]="product?.type === 'dress'">Dress</option>
-        <option value="short" [selected]="product?.type === 'short'">Short</option>
+        <option [selected]="product?.type === 'pant'" value="pant">Pant</option>
+        <option [selected]="product?.type === 'shirt'" value="shirt">Shirt</option>
+        <option [selected]="product?.type === 'eyewear'" value="eyewear">Eyewear</option>
+        <option [selected]="product?.type === 'shoe'" value="shoe">Shoe</option>
+        <option [selected]="product?.type === 'dress'" value="dress">Dress</option>
+        <option [selected]="product?.type === 'short'" value="short">Short</option>
       </select>
-      <span class="error" *ngIf="form.controls['type']?.hasError('required')">This Field is Required</span>
+      <span *ngIf="form.controls['type']?.hasError('required')" class="error">This Field is Required</span>
     </div>
 
     <div>
       <label for="color">Color</label>
       <input formControlName="color" id="color">
-      <span class="error" *ngIf="form.controls['color']?.hasError('required')">This Field is Required</span>
-      <span class="error" *ngIf="form.controls['color']?.hasError('maxlength')">Must be less than 56 Characters</span>
+      <span *ngIf="form.controls['color']?.hasError('required')" class="error">This Field is Required</span>
+      <span *ngIf="form.controls['color']?.hasError('maxlength')" class="error">Must be less than 56 Characters</span>
     </div>
 
     <div>
       <label for="price">Price</label>
-      <input formControlName="price" id="price" type="number" step="0.01">
-      <span class="error" *ngIf="form.controls['price']?.hasError('required')">This Field is Required</span>
-      <span class="error" *ngIf="form.controls['price']?.hasError('min')">Must be at least $0.00</span>
+      <input formControlName="price" id="price" step="0.01" type="number">
+      <span *ngIf="form.controls['price']?.hasError('required')" class="error">This Field is Required</span>
+      <span *ngIf="form.controls['price']?.hasError('min')" class="error">Must be at least $0.00</span>
     </div>
     <button (click)="update()">Update</button>
   </form>
