--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,11 +1,11 @@
 <div class="product-list">
   <div class="filter">
     <h2>Filter</h2>
-    <input [formControl]="searchInput" type="text" class="search-box" placeholder="Search...">
+    <input [formControl]="searchInput" class="search-box" placeholder="Search..." type="text">
 
     <div class="color-filters">
       <div *ngFor="let color of colors">
-        <div [style]="{background: color}" class="color-box" (click)="filterColor(color)">
+        <div (click)="filterColor(color)" [style]="{background: color}" class="color-box">
           <span *ngIf="filteredColors.has(color)">✓</span>
         </div>
       </div>
@@ -31,17 +31,17 @@
         <td>{{product.type}}</td>
         <td>{{product.price | currency}}</td>
         <td>
-          <button class="edit-button" [routerLink]="'/product-detail/' + product.sku">Edit</button>
-          <button class="delete-button" (click)="delete(product.sku)">Delete</button>
+          <button [routerLink]="'/product-detail/' + product.sku" class="edit-button">Edit</button>
+          <button (click)="delete(product.sku)" class="delete-button">Delete</button>
         </td>
       </tr>
       </tbody>
       <tfoot>
       <tr>
         <td>
-          <button *ngIf="page !== 0" (click)="navigatePage(true)"><< Prev</button>
+          <button (click)="navigatePage(true)" *ngIf="page !== 0"><< Prev</button>
           Page {{page + 1}} of {{totalPages}}
-          <button *ngIf="page < totalPages - 1" (click)="navigatePage()">Next >></button>
+          <button (click)="navigatePage()" *ngIf="page < totalPages - 1">Next >></button>
         </td>
       </tr>
       </tfoot>
